--- a/netlify.toml
+++ b/netlify.toml
@@ -10,3 +10,4 @@
     Referrer-Policy = "no-referrer"
     Content-Security-Policy = "default-src 'self' http: https: data: blob: 'unsafe-inline'; frame-ancestors 'none'"
     Strict-Transport-Security = "max-age=31536000; includeSubDomains; preload"
+    X-Robots-Tag = "noindex"
