--- a/netlify.toml
+++ b/netlify.toml
@@ -11,3 +11,8 @@
     Content-Security-Policy = "default-src 'self' http: https: data: blob: 'unsafe-inline'; frame-ancestors 'none'"
     Strict-Transport-Security = "max-age=31536000; includeSubDomains; preload"
     X-Robots-Tag = "noindex"
+
+[[redirects]]
+  from = "/*"
+  to = "/"
+  status = 404
